src/app/giphy/components/user-input/user-input.component.scss
.user-input {

  max-width: 400px;
  margin-left: auto;
  margin-right: auto;

  &__form {
    display: flex;
    justify-content: center;
    margin-bottom: 20px;
  }

  &__validation {
    text-align: center;
  }

  &__search {
    font-size: 18px;
    color: #5f5f5f;
    outline: none;
    width: 100%;
    background-color: #ffffff;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-bottom: 1px solid #5f5f5f;
    margin-right: 5px;
  }

  &__button {
    font-size: 18px;
    color: #5f5f5f;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-bottom: 1px solid #5f5f5f;
    cursor: pointer;
  }

}

